Changes: - Updated Lang file

--- a/src/main/resources/assets/fantasycraft/lang/en_us.json
+++ b/src/main/resources/assets/fantasycraft/lang/en_us.json
@@ -1,14 +1,55 @@
 {
-  "block.fantasycraft.mithril_block" : "Mithril Block",
+  "block.fantasycraft.mithril_block" : "Block of Mithril",
   "block.fantasycraft.mithril_ore" : "Mithril Ore",
+  "block.fantasycraft.silver_block" : "Block of Silver",
+  "block.fantasycraft.silver_ore" : "Silver Ore",
+  "block.fantasycraft.bronze_block" : "Block of Bronze",
+  "block.fantasycraft.bronze_ore" : "Bronze Ore",
+  "block.fantasycraft.prismarine_block" : "Block of Prismarine",
+  "block.fantasycraft.dwarven_blast_furnace" : "Dwarven Blast Furnace",
 
+  "item.fantasycraft.dwarven_sword" : "Dwarven Sword",
+  "item.fantasycraft.dwarven_pickaxe" : "Dwarven Pickaxe",
+  "item.fantasycraft.dwarven_axe" : "Dwarven Axe",
+  "item.fantasycraft.dwarven_shovel" : "Dwarven Shovel",
+  "item.fantasycraft.dwarven_hoe" : "Dwarven Hoe",
+  "item.fantasycraft.elven_sword" : "Elven Sword",
+  "item.fantasycraft.elven_pickaxe" : "Elven Pickaxe",
+  "item.fantasycraft.elven_axe" : "Elven Axe",
+  "item.fantasycraft.elven_shovel" : "Elven Shovel",
+  "item.fantasycraft.elven_hoe" : "Elven Hoe",
+  "item.fantasycraft.elven_bow" : "Elven Bow",
+  "item.fantasycraft.triton_sword" : "Triton Sword",
+  "item.fantasycraft.triton_pickaxe" : "Triton Pickaxe",
+  "item.fantasycraft.triton_axe" : "Triton Axe",
+  "item.fantasycraft.triton_shovel" : "Triton Shovel",
+  "item.fantasycraft.triton_hoe" : "Triton Hoe",
   "item.fantasycraft.mithril_sword" : "Mithril Sword",
   "item.fantasycraft.mithril_pickaxe" : "Mithril Pickaxe",
   "item.fantasycraft.mithril_axe" : "Mithril Axe",
   "item.fantasycraft.mithril_shovel": "Mithril Shovel",
   "item.fantasycraft.mithril_hoe" : "Mithril Hoe",
-  "item.fantasycraft.mithril_ingot" : "Mithril Ingot",
 
+  "item.fantasycraft.bronze_ingot" : "Bronze Ingot",
+  "item.fantasycraft.silver_ingot" : "Silver Ingot",
+  "item.fantasycraft.prismarine_ingot" : "Prismarine Ingot",
+  "item.fantasycraft.mithril_ingot" : "Mithril Ingot",
+  "item.fantasycraft.elven_arrow" : "Elven Arrow",
+  "item.fantasycraft.silver_arrow_head" : "Silver Arrow Head",
+  "item.fantasycraft.stone_rod" : "Stone Rod",
+
+  "item.fantasycraft.dwarven_helmet" : "Dwarven Helmet",
+  "item.fantasycraft.dwarven_chestplate" : "Dwarven Chestplate",
+  "item.fantasycraft.dwarven_leggings" : "Dwarven Leggings",
+  "item.fantasycraft.dwarven_boots" : "Dwarven Boots",
+  "item.fantasycraft.elven_helmet" : "Elven Helmet",
+  "item.fantasycraft.elven_chestplate" : "Elven Chestplate",
+  "item.fantasycraft.elven_leggings" : "Elven Leggings",
+  "item.fantasycraft.elven_boots" : "Elven Boots",
+  "item.fantasycraft.triton_helmet" : "Triton Helmet",
+  "item.fantasycraft.triton_chestplate" : "Triton Chestplate",
+  "item.fantasycraft.triton_leggings" : "Triton Leggings",
+  "item.fantasycraft.triton_boots" : "Triton Boots",
   "item.fantasycraft.mithril_helmet" : "Mithril Helmet",
   "item.fantasycraft.mithril_chestplate" : "Mithril Chestplate",
   "item.fantasycraft.mithril_leggings" : "Mithril Leggings",
