Changes: - QOL additions   - Armor sets now display their full set armor bonuses in their tooltips - Removed Orc power: Aversions to shirts, till I figure out a better debuff so that orc players can use the full set armor bonuses - Fixed bug that removed Triton player's powers if they had any piece of Fantasycraft Armor in their inventory

--- a/src/main/resources/assets/fantasycraft/lang/en_us.json
+++ b/src/main/resources/assets/fantasycraft/lang/en_us.json
@@ -38,18 +38,31 @@
   "item.fantasycraft.silver_arrow_head" : "Silver Arrow Head",
   "item.fantasycraft.stone_rod" : "Stone Rod",
 
+  "item.fantasycraft.dwarven_armor.tooltip_1" : "Full Set Bonus:",
+  "item.fantasycraft.dwarven_armor.tooltip_2" : "Haste",
+  "item.fantasycraft.dwarven_armor.tooltip_3" : "Fire Resistance",
+  "item.fantasycraft.dwarven_armor.tooltip_4" : "Night Vision",
   "item.fantasycraft.dwarven_helmet" : "Dwarven Helmet",
   "item.fantasycraft.dwarven_chestplate" : "Dwarven Chestplate",
   "item.fantasycraft.dwarven_leggings" : "Dwarven Leggings",
   "item.fantasycraft.dwarven_boots" : "Dwarven Boots",
+  "item.fantasycraft.elven_armor.tooltip_1" : "Full Set Bonus:",
+  "item.fantasycraft.elven_armor.tooltip_2" : "Speed",
+  "item.fantasycraft.elven_armor.tooltip_3" : "Jump Boost",
+  "item.fantasycraft.elven_armor.tooltip_4" : "Night Vision",
   "item.fantasycraft.elven_helmet" : "Elven Helmet",
   "item.fantasycraft.elven_chestplate" : "Elven Chestplate",
   "item.fantasycraft.elven_leggings" : "Elven Leggings",
   "item.fantasycraft.elven_boots" : "Elven Boots",
+  "item.fantasycraft.triton_armor.tooltip_1" : "Full Set Bonus:",
+  "item.fantasycraft.triton_armor.tooltip_2" : "Dolphin's Grace",
+  "item.fantasycraft.triton_armor.tooltip_3" : "Conduit's Power",
   "item.fantasycraft.triton_helmet" : "Triton Helmet",
   "item.fantasycraft.triton_chestplate" : "Triton Chestplate",
   "item.fantasycraft.triton_leggings" : "Triton Leggings",
   "item.fantasycraft.triton_boots" : "Triton Boots",
+  "item.fantasycraft.mithril_armor.tooltip_1" : "Full Set Bonus:",
+  "item.fantasycraft.mithril_armor.tooltip_2" : "Regeneration",
   "item.fantasycraft.mithril_helmet" : "Mithril Helmet",
   "item.fantasycraft.mithril_chestplate" : "Mithril Chestplate",
   "item.fantasycraft.mithril_leggings" : "Mithril Leggings",
