--- a/src/main/resources/assets/fantasycraft/lang/pt_br.json
+++ b/src/main/resources/assets/fantasycraft/lang/pt_br.json
@@ -7,6 +7,7 @@
   "block.fantasycraft.bronze_ore" : "Minério de Bronze",
   "block.fantasycraft.prismarine_block" : "Bloco de Prismarino",
   "block.fantasycraft.dwarven_blast_furnace" : "Alto-Forno Dwarven",
+  "block.fantasycraft.elven_chest": "Elven Chest",
 
   "item.fantasycraft.dwarven_sword" : "Espada Dwarven",
   "item.fantasycraft.dwarven_pickaxe" : "Picareta Dwarven",
@@ -37,6 +38,9 @@
   "item.fantasycraft.elven_arrow" : "Flecha Élfica",
   "item.fantasycraft.silver_arrow_head" : "Cabeça de Flecha de Prata",
   "item.fantasycraft.stone_rod" : "Haste de Pedra",
+  "item.fantasycraft.unseen_eye": "Eye of the Unseen",
+  "item.fantasycraft.hobbit_ring": "Hobbit Ring",
+  "item.fantasycraft.silver_flesh": "Silver Flesh",
 
   "item.fantasycraft.dwarven_armor.tooltip_1" : "Bônus de conj. completo:",
   "item.fantasycraft.dwarven_armor.tooltip_2" : "Pressa",
@@ -67,6 +71,8 @@
   "item.fantasycraft.mithril_chestplate" : "Peitoral de Mithril",
   "item.fantasycraft.mithril_leggings" : "Calças de Mithril",
   "item.fantasycraft.mithril_boots" : "Botas de Mithril",
+
+  "enchantment.fantasycraft.poison": "Poison",
 
   "itemGroup.fantasycraft.general" : "Fantasycraft"
 }
