Fixed Armor Protection issues Fixed Typo in Lang file

--- a/src/main/resources/assets/fantasycraft/lang/en_us.json
+++ b/src/main/resources/assets/fantasycraft/lang/en_us.json
@@ -20,7 +20,7 @@
   "item.fantasycraft.elven_shovel" : "Elven Shovel",
   "item.fantasycraft.elven_hoe" : "Elven Hoe",
   "item.fantasycraft.elven_bow" : "Elven Bow",
-  "item.fantasycraft.triton_trident" : "Triton Triton",
+  "item.fantasycraft.triton_trident" : "Triton Trident",
   "item.fantasycraft.triton_sword" : "Triton Sword",
   "item.fantasycraft.triton_pickaxe" : "Triton Pickaxe",
   "item.fantasycraft.triton_axe" : "Triton Axe",
