--- a/src/main/resources/assets/fantasycraft/lang/pt_br.json
+++ b/src/main/resources/assets/fantasycraft/lang/pt_br.json
@@ -20,6 +20,7 @@
   "item.fantasycraft.elven_shovel" : "Pá Élfica",
   "item.fantasycraft.elven_hoe" : "Enxada Élfica",
   "item.fantasycraft.elven_bow" : "Arco Élfico",
+  "item.fantasycraft.triton_trident" : "Triton Trident",
   "item.fantasycraft.triton_sword" : "Espada Tritão",
   "item.fantasycraft.triton_pickaxe" : "Picareta Tritão",
   "item.fantasycraft.triton_axe" : "Machado Tritão",
